# chromium-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: find_slack_xoxc.py
src/chromium_reader/: __init__.py  _blink_deserializer.py  _snappy.py  _v8_deserializer.py  common.py  indexeddb.py  leveldb.py  localstorage.py  sessionstorage.py
tests/: test_arc_smoke.py  test_blink_deserializer.py  test_indexeddb.py  test_leveldb_log.py  test_localstorage.py  test_sessionstorage.py  test_snappy.py  test_v8_deserializer.py
